syntax = "proto3";

option java_package = "server"; 
option java_outer_classname = "AuthProto";

package auth;

service AuthGrpcService {
    rpc LoginGrpc(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}